# scheme-plugin-system

./: .gitmodules  README.md  meson.build
.github/workflows/: build.yml
plugins/: hello_plugin.ss
src/: chez_adaptor.c  chez_adaptor.h  main.c  plugin.c  plugin.h
